fix: improve messenger header on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,11 +62,12 @@
 }
 
 .btn {
-  @apply w-24 h-10 p-2 shrink-0 border border-active rounded-md text-sm font-bold shadow transition
+  @apply w-16 sm:w-24 h-8 sm:h-10 sm:p-2 shrink-0 border border-active rounded-md text-[10px] sm:text-sm font-bold shadow transition
     bg-inactive text-foreground hover:bg-accent active:scale-95;
   box-shadow: -1px 1px 1px 0 rgba(0, 0, 0, 0.35);
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.05);
 }
+
 
 .link-btn {
   @apply flex items-center justify-center
@@ -89,14 +90,11 @@
 }
 
 .input {
-  @apply flex-1 h-10 p-2 shrink-0 border border-active rounded-md text-sm shadow transition
+  @apply flex-1 h-8 sm:h-10 p-2 shrink-0 border border-active rounded-md text-sm shadow transition
     bg-accent text-foreground active:scale-95;
   box-shadow: -1px 1px 1px 0 rgba(0, 0, 0, 0.35);
 }
 
-.safe-bottom {
-  padding-bottom: env(safe-area-inset-bottom);
-}
 
 body {
   background: var(--color-background);
